add profile jdk9 and later for tests to pom.xml
(cherry picked from commit 8a759c92644e7e62f2a437a4feef68ee45b79f76)